--- a/urunler.html
+++ b/urunler.html
@@ -13,27 +13,27 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
       <div class="bg-white rounded-2xl shadow p-4">
-        <img src="urunler/urun5.jpg" alt="Червена рокля" class="w-full h-64 object-cover rounded-xl">
+        <img src="/urunler/urun5.jpg" alt="Червена рокля" class="w-full h-64 object-cover rounded-xl">
         <h2 class="mt-4 text-xl font-semibold">Червена рокля</h2>
         <p class="text-lg text-blue-600 font-bold">20 лв.</p>
       </div>
       <div class="bg-white rounded-2xl shadow p-4">
-        <img src="urunler/urun4.jpg" alt="Сив комплект Mickey Mouse" class="w-full h-64 object-cover rounded-xl">
+        <img src="/urunler/urun4.jpg" alt="Сив комплект Mickey Mouse" class="w-full h-64 object-cover rounded-xl">
         <h2 class="mt-4 text-xl font-semibold">Сив комплект Mickey Mouse</h2>
         <p class="text-lg text-blue-600 font-bold">23 лв.</p>
       </div>
       <div class="bg-white rounded-2xl shadow p-4">
-        <img src="urunler/urun3.jpg" alt="Розово-син спортен комплект" class="w-full h-64 object-cover rounded-xl">
+        <img src="/urunler/urun3.jpg" alt="Розово-син спортен комплект" class="w-full h-64 object-cover rounded-xl">
         <h2 class="mt-4 text-xl font-semibold">Розово-син спортен комплект</h2>
         <p class="text-lg text-blue-600 font-bold">25 лв.</p>
       </div>
       <div class="bg-white rounded-2xl shadow p-4">
-        <img src="urunler/urun2.jpg" alt="Синя пижама с панди" class="w-full h-64 object-cover rounded-xl">
+        <img src="/urunler/urun2.jpg" alt="Синя пижама с панди" class="w-full h-64 object-cover rounded-xl">
         <h2 class="mt-4 text-xl font-semibold">Синя пижама с панди</h2>
         <p class="text-lg text-blue-600 font-bold">12 лв.</p>
       </div>
       <div class="bg-white rounded-2xl shadow p-4">
-        <img src="urunler/urun1.jpg" alt="Лилав комплект с леопардов принт" class="w-full h-64 object-cover rounded-xl">
+        <img src="/urunler/urun1.jpg" alt="Лилав комплект с леопардов принт" class="w-full h-64 object-cover rounded-xl">
         <h2 class="mt-4 text-xl font-semibold">Лилав комплект с леопардов принт</h2>
         <p class="text-lg text-blue-600 font-bold">23 лв.</p>
       </div>
